--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,18 +5,18 @@ agent:
   machine:
     type: e1-standard-4
     os_image: ubuntu1804
-  containers:
-    - name: main
-      image: semaphoreci/android:29
 
 blocks:
+
   - name: Test without mailserver
     execution_time_limit:
-      minutes: 10
+      minutes: 30
     task:
       env_vars:
         - name: SEMAPHORE_GIT_DIR
           value: /home/semaphore/git/flowcrypt-android
+        - name: ANDROID_SDK_ROOT
+          value: /home/semaphore/Android/Sdk
       jobs:
         - name: Test without mailserver
           commands:
@@ -27,22 +27,20 @@ blocks:
             # restore caches
             - export SUM=$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh)
             - export GRADLE_CACHE=gradle-cache-$SUM # per conf files hash
-            #- export ANDROID_SDK_CACHE=android-sdk-$SUM  # per conf files hash
+            - export ANDROID_SDK_CACHE=android-sdk-$SUM  # per conf files hash
             - export BUILD_NATIVE_CACHE=build-native-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
             - export BUILD_CACHE=build-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
-            #- cache restore $ANDROID_SDK_CACHE
+            - cache restore $ANDROID_SDK_CACHE
             - cache restore $GRADLE_CACHE
             - cache restore $BUILD_NATIVE_CACHE
             - cache restore $BUILD_CACHE
 
             # build + test
-            - sudo apt-get update
-            - sudo apt-get -yq install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
-            - sdkmanager "platform-tools" "platforms;android-29" "emulator" "extras;google;m2repository" "build-tools;29.0.2"
-            - sdkmanager "system-images;android-29;google_apis;x86_64"
-            - echo no | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
-            - emulator -list-avds # debug
-            - emulator -no-window -avd ci-test-pixel-x86-64-api29 -no-boot-anim -no-audio & # start emulator in the background
+            - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
+            - ~/Android/Sdk/emulator/emulator -accel-check # debug
+            - echo -ne '\n' | ~/Android/Sdk/tools/bin/avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
+            - ~/Android/Sdk/emulator/emulator -list-avds # debug
+            - ~/Android/Sdk/emulator/emulator -no-window -avd ci-test-pixel-x86-64-api29 -no-boot-anim -no-audio & # start emulator in the background
             - $SEMAPHORE_GIT_DIR/script/ci-wait-for-emulator.sh # wait till ready
             # - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-disable-emulator-animations.sh )
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-tests-without-mailserver.sh )
@@ -50,7 +48,7 @@ blocks:
             # store caches
             - find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
             - cache has_key $GRADLE_CACHE || cache store $GRADLE_CACHE .gradle
-            #- cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
+            - cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
             - cache has_key $BUILD_NATIVE_CACHE || cache store $BUILD_NATIVE_CACHE git/flowcrypt-android/FlowCrypt/.externalNativeBuild
             - cache has_key $BUILD_CACHE || cache store $BUILD_CACHE git/flowcrypt-android/FlowCrypt/build
 
